# tree-sitter-fortran

./: .eslintrc.yml  .gitattributes  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  MANIFEST.in  Makefile  Package.swift  README.md  binding.gyp  grammar.js  index.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/workflows/: ci.yml  publish.yml  pypi.yml
bindings/c/: tree-sitter-fortran.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tree_sitter_fortran/: __init__.py  binding.c
bindings/rust/: lib.rs
bindings/swift/TreeSitterFortran/: fortran.h
corpus/: constructs.txt  expressions.txt  statements.txt
examples/: BoundingBox_Method.F90  BoundingBox_Method@ConstructorMethods.F90  expressions.f90  simple_program.f90  temporary.f03
queries/: highlights.scm  indents.scm
src/: binding.cc  grammar.json  node-types.json  parser.c  scanner.c  scanner.cc
test/: cudafortran.scm
test/corpus/: constructs.txt  cudafortran.txt  expressions.txt  line_continuations.txt  preprocessor.txt  regressions.txt  statements.txt
